2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/community.c (igraph_community_edge_betweenness) : added
	* examples/simple/igraph_community_edge_betweenness.c : added

	* src/structural_properties.c (igraph_edge_betweenness) : 
	always use one adjacency list for undirected graphs

	* src/vector.c (igraph_vector_min, igraph_vector_which_min) : added

2007-04-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/walktrap.cpp
	* src/walktrap_communities.cpp
	* src/walktrap_graph.cpp
	* src/walktrap_heap.cpp : added
	* examples/simple/walktrap.c : added

	* src/flow.c (igraph_mincut, igraph_i_mincut_undirected) :
	'partition2' and 'cut' arguments added
	* examples/simple/igraph_mincut.c : updated

	* src/flow.c (igraph_i_mincut_value_undirected)
	(igraph_i_mincut_undirected) : former renamed to latter and 
	minimum cut calculation added, there is a simple wrapper under the 
	name of the former
	(igraph_mincut) : added, simple wrapper
	* examples/simple/igraph_mincut.c : added

2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass_create) : bug corrected, sometimes 
	isolates were left out.

	* src/type_indexededgelist.c (igraph_neighbors) : always return 
	sorted vertex id lise
	* src/motifs.c (igraph_motifs_randesu) : this nasty implementation
	used the fact that for a directed graph and IGRAPH_ALL, the outgoing 
	edges came first. Not anymore, updated.

	* src/type_indexededgelist.c (igraph_add_edges) : make sure that
	for undirected graphs the smaller node id is in 'from'

	* src/adjlist.c (igraph_i_adjlist_sort)
	(igraph_i_lazy_adjlist_get_real) : updated to take advantage of 
	the sorted neighbor lists

	* src/vector.c (igraph_vector_binsearch2) : added
	* src/topology.c (igraph_isomorphism_vf2) : updated to use binsearch2

	* src/vector.c (igraph_vector_order, igraph_vector_order1) : two vectors 
	can be supplied now as the basis of the ranking, 
	old version renamed to igraph_vector_order1