@@ -1,3 +1,10 @@
+2007-04-03  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/community.R 
+	(edge.betweenness.community) : optionally return eb values
+	* interfaces/R/src/rinterface.c 
+	(R_igraph_community_edge_betweenness) : updated
+
 2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/community.R 
