@@ -1,3 +1,8 @@
+2007-04-03  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/community.c (igraph_community_edge_betweenness) : 
+	optionally returns the e.b. values for the cuts
+
 2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/community.c (igraph_community_edge_betweenness) : added
